src/common/Player.scss
@import "./common.scss";

.playerBox {
    padding: .1rem  0;
    margin: 0 0 1rem;

    @include flex();

    .infoItem {
        margin: 0 .5rem;

        flex-wrap
: wrap;
        @include flex(flex-start);

        h1,
        p {
            display: inline-block;
            padding: 0 .25rem;
            margin: 0;

            box-sizing: border-box;

            font-size: 1rem;
        }

        h1 {
            font-family: $fontFamily-oswald;

            white-space: nowrap;
        }

        p {
            padding-top: .1rem;

            font-family: $fontFamily-handwritten;

            white-space: break-spaces;

            @include flex(flex-start);

            .class {
                white-space: nowrap;

                &:not(:last-of-type) {
                    margin-right: .25rem;
                }

                &:last-of-type .comma {
                    display: none;
                }
            }
        }

        &.tierItem {
            margin: .1rem .5rem -.1rem;

            .tierList {
                padding: 0 0 .2rem .2rem;
                margin: 0;

                list-style: none;

                @include flex(center, flex-start);

                li {
                    width: 1.25rem;
                    height: 1.25rem;
                    padding-top: .25rem;

                    font-family: $fontFamily-handwritten;
                    font-size: 1rem;

                    text-align: center;

                    color: $color-bsborder;
                    border: 2px solid $color-bsborder;
                    border-radius: 50%;

                    @include flex();

                    &:not(:last-of-type) {
                        margin-right: .25rem;
                    }

                    &.filled {
                        color: black;
                        border-color: gray;
                        background: $color-bsbg;
                    }
                }
            }
        }
    }
}

// Extra small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap

// Small devices (landscape phones, 576px and up)
@media (min-width:576px) {
}

// Medium devices (tablets, 768px and up)
@media (min-width:768px) {
}

// Large devices (desktops, 992px and up)
@media (min-width:992px) {
    .playerBox .infoItem {
        p,
        h1 {
            font-size: 1.25rem;
        }

        p .class:not(:last-of-type) {
            margin-right: .5rem;
        }

        &.tierItem .tierList li {
            width: 1.75rem;
            height: 1.75rem;

            font-size: 1.25rem;
        }
    }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width:1200px) {
}

